--- a/client/client.html
+++ b/client/client.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Our simple HTTP server</title>
-  <link rel="stylesheet" type="text/css" href="/style.css">
-  
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
-  <script type="text/babel">
 
-  </script>
+<head>
+    <title>Our simple HTTP server</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
+    <script type="text/babel">
+        const handleResponse = (xhr) => { const type = xhr.getResponseHeader('content-type'); const content = document.querySelector('#content'); switch (xhr.status) { case 200: content.innerHTML = '<b>Success!</b>'; break; case 400: content.innerHTML
+        = '<b>Bad Request :(</b>'; break; case 401: content.innerHTML = '<b>Unauthorized!</b>'; break; case 403: content.innerHTML = '<b>Forbidden!</b>'; break; case 500: content.innerHTML = '<b>Internal Server Error!</b>'; break; case 501: content.innerHTML
+        = '<b>Not Implemented!</b>'; break; case 404: content.innerHTML = '<b>Not Found!</b>'; break; } let msg = 'Message: '; if (type === 'application/json') { const obj = JSON.parse(xhr.response); console.log(obj); msg += `${obj.message}`; } else if
+        (type === 'text/xml') { console.log(xhr.response); msg += xhr.responseXML.querySelector('message').textContent; } content.innerHTML += `
+        <p>${msg}</p>`; }; const sendAjax = (url, acceptedType) => { const xhr = new XMLHttpRequest(); xhr.open('GET', url); xhr.setRequestHeader('Accept', acceptedType); xhr.onload = () => handleResponse(xhr); xhr.send(); }; const init = () => { const send
+        = document.querySelector('#send'); const page = document.querySelector('#page'); const type = document.querySelector('#type'); send.addEventListener('click', () => { sendAjax(page.value, type.value); }); }; window.onload = init;
+
+    </script>
 </head>
+
 <body>
-  <section id="top">
-    <h3>Status Code Tests</h3>
-    <select id="page">
+    <section id="top">
+        <h3>Status Code Tests</h3>
+        <select id="page">
       <option value="/success">Success</option>
       <option value="/badRequest">Bad Request</option>
       <option value="/unauthorized">Unauthorized</option>
@@ -21,13 +29,14 @@
       <option value="/notImplemented">Not Implemented</option>
       <option value="/notFound">Not Found</option>
     </select>
-    <select id="type">
+        <select id="type">
       <option value="application/json">JSON</option>
       <option value="text/xml">XML</option>
     </select>
-    <button id="send">Send</button>
-  </section>
-  <section id="content">
-  </section>
+        <button id="send">Send</button>
+    </section>
+    <section id="content">
+    </section>
 </body>
+
 </html>
