--- a/client/client.html
+++ b/client/client.html
@@ -7,12 +7,69 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
     <script type="text/babel">
-        const handleResponse = (xhr) => { const type = xhr.getResponseHeader('content-type'); const content = document.querySelector('#content'); switch (xhr.status) { case 200: content.innerHTML = '<b>Success!</b>'; break; case 400: content.innerHTML
-        = '<b>Bad Request :(</b>'; break; case 401: content.innerHTML = '<b>Unauthorized!</b>'; break; case 403: content.innerHTML = '<b>Forbidden!</b>'; break; case 500: content.innerHTML = '<b>Internal Server Error!</b>'; break; case 501: content.innerHTML
-        = '<b>Not Implemented!</b>'; break; case 404: content.innerHTML = '<b>Not Found!</b>'; break; } let msg = 'Message: '; if (type === 'application/json') { const obj = JSON.parse(xhr.response); console.log(obj); msg += `${obj.message}`; } else if
-        (type === 'text/xml') { console.log(xhr.response); msg += xhr.responseXML.querySelector('message').textContent; } content.innerHTML += `
-        <p>${msg}</p>`; }; const sendAjax = (url, acceptedType) => { const xhr = new XMLHttpRequest(); xhr.open('GET', url); xhr.setRequestHeader('Accept', acceptedType); xhr.onload = () => handleResponse(xhr); xhr.send(); }; const init = () => { const send
-        = document.querySelector('#send'); const page = document.querySelector('#page'); const type = document.querySelector('#type'); send.addEventListener('click', () => { sendAjax(page.value, type.value); }); }; window.onload = init;
+        const handleResponse = (xhr) => {
+			const type = xhr.getResponseHeader('content-type');
+			const content = document.querySelector('#content');
+			
+			switch (xhr.status) {
+				case 200: 
+					content.innerHTML = '<b>Success!</b>';
+					break;
+				case 400: 
+					content.innerHTML = '<b>Bad Request :(</b>';
+					break;
+				case 401:
+					content.innerHTML = '<b>Unauthorized!</b>';
+					break;
+				case 403:
+					content.innerHTML = '<b>Forbidden!</b>';
+					break;
+				case 500:
+					content.innerHTML = '<b>Internal Server Error!</b>';
+					break;
+				case 501: 
+					content.innerHTML = '<b>Not Implemented!</b>';
+					break;
+				case 404:
+					content.innerHTML = '<b>Not Found!</b>';
+					break;
+			}
+			
+			let msg = 'Message: ';
+			
+			if (type === 'application/json') {
+				const obj = JSON.parse(xhr.response);
+				console.log(obj);
+				msg += `${obj.message}`;
+			} 
+			else if(type === 'text/xml') {
+				console.log(xhr.response);
+				msg += xhr.responseXML.querySelector('message').textContent;
+			} 
+			
+			content.innerHTML += `<p>${msg}</p>`;
+		}; 
+		
+		const sendAjax = (url, acceptedType) => {
+			const xhr = new XMLHttpRequest();
+			xhr.open('GET', url);
+			xhr.setRequestHeader('Accept', acceptedType);
+			
+			xhr.onload = () => handleResponse(xhr);
+			xhr.send();
+		}; 
+		
+		const init = () => {
+			const send = document.querySelector('#send');
+			const page = document.querySelector('#page');
+			const type = document.querySelector('#type');
+			
+			send.addEventListener('click', () => {
+				sendAjax(page.value, type.value);
+			});
+		};
+		
+		window.onload = init;
 
     </script>
 </head>
